[package]
name = "auto_planning_backend"
version = "0.1.0"
edition = "2024"
authors = ["zlc", "trh"]

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = true, features = [ "mysql", "runtime-tokio", "tls-native-tls", "time", "chrono"] }
tokio = { version = "1.45", features = [ "full" ]}
tracing-subscriber = "0.3"
anyhow = "1.0"
bcrypt = "0.17"
chrono = { version = "0.4", default-features = true, features = [ "serde" ] }
uuid = { version = "1.17", default-features = true, features = ["serde"] }
